[package]
name = "articut-api"
version = "0.1.0"
edition = "2021"
include = ["/src", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "full"] }

[dev-dependencies]
env-file-reader = "0.3.0"

[[example]]
name = "example"
